test: improve test coverage and add H2 for testing
- Add H2 database dependency for integration tests
- Refactor admission service tests with better assertions
- Add new test classes for enrichment and status services
- Improve AI assistant controller test coverage
- Add test resources and configuration